--- a/package.json
+++ b/package.json
@@ -18,9 +18,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
+
   },
   "dependencies": {
+    "random": "^5.1.1",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
