--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "brain-gcd": "bin/brain-gcd.js",
     "brain-progression": "bin/brain-progression.js",
     "brain-prime": "bin/brain-prime.js"
-
   },
   "dependencies": {
+    "eslint-plugin-fp": "^2.3.0",
     "random": "^5.1.1",
     "readline-sync": "^1.4.10"
   },
